adapt mechanical dimensions (from Marlin)

--- a/printer-anycubic-kossel-plus-2017-adapted.cfg
+++ b/printer-anycubic-kossel-plus-2017-adapted.cfg
@@ -20,7 +20,7 @@ homing_speed: 60
 # and meassure the distance from nozzle to bed.
 # This value then needs to be added.
 position_endstop: 295.6
-arm_length: 269.0
+arm_length: 266.80
 
 [stepper_b]
 step_pin: PF6
@@ -76,10 +76,10 @@ kick_start_time: 0.200
 pin: PL5
 
 # if you want to use your probe for DELTA_CALIBRATE you will need that
-#[probe]
-#pin: ^PD3
-#z_offset: 15.9
-#samples: 3
+[probe]
+pin: ^PD3
+z_offset: 16.33
+samples: 3
 
 [mcu]
 serial: /dev/ttyUSB0
@@ -89,7 +89,8 @@ kinematics: delta
 max_velocity: 500
 max_accel: 3000
 max_z_velocity: 200
-delta_radius: 134.4
+delta_radius: 133.0
+print_radius: 110.0
 # if you want to DELTA_CALIBRATE you may need that
 #minimum_z_position: -5
 
