--- a/printer.cfg
+++ b/printer.cfg
@@ -6,6 +6,7 @@
 # To use this config, the firmware should be compiled for the AVR atmega2560.
 
 # See docs/Config_Reference.md for a description of parameters.
+[include mainsail.cfg]
 
 [stepper_a]
 step_pin: PF0
@@ -19,8 +20,8 @@ homing_speed: 60
 # your printer. You may want to start with 280
 # and meassure the distance from nozzle to bed.
 # This value then needs to be added.
-position_endstop: 295.6
-arm_length: 266.80
+#position_endstop: 295.6
+#arm_length: 266.80
 
 [stepper_b]
 step_pin: PF6
@@ -78,7 +79,7 @@ pin: PL5
 # if you want to use your probe for DELTA_CALIBRATE you will need that
 [probe]
 pin: ^PD3
-z_offset: 16.33
+#z_offset: 16.33
 samples: 3
 
 [mcu]
@@ -89,8 +90,8 @@ kinematics: delta
 max_velocity: 500
 max_accel: 3000
 max_z_velocity: 200
-delta_radius: 133.0
-print_radius: 110.0
+#delta_radius: 133.0
+print_radius: 101.0
 # if you want to DELTA_CALIBRATE you may need that
 #minimum_z_position: -5
 
@@ -100,7 +101,7 @@ timeout: 360
 [delta_calibrate]
 radius: 115
 # If the original probe is used
-#horizontal_move_z: 20
+horizontal_move_z: 20
 
 # "RepRapDiscount 2004 Smart Controller" type displays
 [display]
@@ -114,3 +115,43 @@ d7_pin: PA7
 encoder_pins: ^PC6, ^PC4
 click_pin: ^!PC2
 kill_pin: ^!PG0
+
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [probe]
+#*# z_offset = 16.433
+#*#
+#*# [printer]
+#*# delta_radius = 133.252474
+#*#
+#*# [stepper_a]
+#*# angle = 209.628850
+#*# arm_length = 266.800000
+#*# position_endstop = 294.662257
+#*#
+#*# [stepper_b]
+#*# angle = 330.191293
+#*# arm_length = 266.800000
+#*# position_endstop = 295.307626
+#*#
+#*# [stepper_c]
+#*# angle = 90.000000
+#*# arm_length = 266.800000
+#*# position_endstop = 296.211882
+#*#
+#*# [delta_calibrate]
+#*# height0 = 16.433
+#*# height0_pos = 22316.667,22316.667,22316.667
+#*# height1 = 16.433
+#*# height1_pos = 27714.000,27714.000,19606.667
+#*# height2 = 16.433
+#*# height2_pos = 21781.000,30925.000,21781.000
+#*# height3 = 16.433
+#*# height3_pos = 19608.333,26694.333,26694.333
+#*# height4 = 16.433
+#*# height4_pos = 21576.333,21576.333,27996.333
+#*# height5 = 16.433
+#*# height5_pos = 25933.000,19796.000,25933.000
+#*# height6 = 16.433
+#*# height6_pos = 29375.000,21701.000,21701.000
