--- a/printer.cfg
+++ b/printer.cfg
@@ -50,10 +50,10 @@ filament_diameter: 1.750
 heater_pin: PB4
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PK5
-control: pid
-pid_Kp: 25.349
-pid_Ki: 1.216
-pid_Kd: 132.130
+#control: pid
+#pid_Kp: 25.349
+#pid_Ki: 1.216
+#pid_Kd: 132.130
 min_extrude_temp: 150
 min_temp: 0
 max_temp: 275
@@ -62,10 +62,10 @@ max_temp: 275
 heater_pin: PH5
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PK6
-control: pid
-pid_kp: 73.517
-pid_ki: 1.132
-pid_kd: 1193.728
+#control: pid
+#pid_kp: 73.517
+#pid_ki: 1.132
+#pid_kd: 1193.728
 min_temp: 0
 max_temp: 130
 
@@ -93,13 +93,13 @@ max_z_velocity: 200
 #delta_radius: 133.0
 print_radius: 101.0
 # if you want to DELTA_CALIBRATE you may need that
-#minimum_z_position: -5
+minimum_z_position: -1
 
 [idle_timeout]
 timeout: 360
 
 [delta_calibrate]
-radius: 115
+radius: 100
 # If the original probe is used
 horizontal_move_z: 20
 
@@ -155,3 +155,15 @@ kill_pin: ^!PG0
 #*# height5_pos = 25933.000,19796.000,25933.000
 #*# height6 = 16.433
 #*# height6_pos = 29375.000,21701.000,21701.000
+#*#
+#*# [extruder]
+#*# control = pid
+#*# pid_kp = 22.206
+#*# pid_ki = 1.558
+#*# pid_kd = 79.109
+#*#
+#*# [heater_bed]
+#*# control = pid
+#*# pid_kp = 70.936
+#*# pid_ki = 1.407
+#*# pid_kd = 893.791
