--- a/printer.cfg
+++ b/printer.cfg
@@ -57,6 +57,7 @@ sensor_pin: PK5
 min_extrude_temp: 150
 min_temp: 0
 max_temp: 275
+max_extrude_only_distance: 100.0 #needed for filament change retraction
 
 [heater_bed]
 heater_pin: PH5
@@ -115,6 +116,31 @@ d7_pin: PA7
 encoder_pins: ^PC6, ^PC4
 click_pin: ^!PC2
 kill_pin: ^!PG0
+
+[exclude_object]
+
+######################################################################
+# Filament Change
+######################################################################
+
+# M600: Filament Change. This macro will pause the printer, move the
+# tool to the change position,
+
+[gcode_macro M600]
+gcode:
+    {% set X = params.X|default(0)|float %}
+    {% set Y = params.Y|default(-100)|float %}
+    {% set Z = params.Z|default(10)|float %}
+    SAVE_GCODE_STATE NAME=M600_state
+    PAUSE
+    G91
+    G1 E-.8 F2700
+    G1 Z{Z}
+    G90
+    G1 X{X} Y{Y} F3000
+    G91
+    G1 E-50 F1000
+    RESTORE_GCODE_STATE NAME=M600_state
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
