--- a/printer.cfg
+++ b/printer.cfg
@@ -44,7 +44,8 @@ step_pin: PA4
 dir_pin: !PA6
 enable_pin: !PA2
 microsteps: 16
-rotation_distance: 33.333
+rotation_distance: 33.499665
+pressure_advance: 0.625
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: PB4
@@ -57,7 +58,7 @@ sensor_pin: PK5
 min_extrude_temp: 150
 min_temp: 0
 max_temp: 275
-max_extrude_only_distance: 100.0 #needed for filament change retraction
+max_extrude_only_distance: 101.0 #needed for filament change retraction
 
 [heater_bed]
 heater_pin: PH5
