add tested max velocity and acceleration

--- a/printer.cfg
+++ b/printer.cfg
@@ -60,6 +60,13 @@ min_temp: 0
 max_temp: 275
 max_extrude_only_distance: 101.0 #needed for filament change retraction
 
+#comment in for retraction tuning tower
+#[firmware_retraction]
+#retract_length: 0.8
+#retract_speed: 60
+#unretract_extra_length: 0
+#unretract_speed: 60
+
 [heater_bed]
 heater_pin: PH5
 sensor_type: EPCOS 100K B57560G104F
@@ -89,8 +96,8 @@ serial: /dev/ttyUSB0
 
 [printer]
 kinematics: delta
-max_velocity: 500
-max_accel: 3000
+max_velocity: 510 # 600 tested with 50 its plus 15% safety
+max_accel: 15300 # 18000 tested with 50 its plus 15% safety
 max_z_velocity: 200
 #delta_radius: 133.0
 print_radius: 101.0
