--- a/printer.cfg
+++ b/printer.cfg
@@ -45,7 +45,15 @@ dir_pin: !PA6
 enable_pin: !PA2
 microsteps: 16
 rotation_distance: 33.499665
-pressure_advance: 0.625
+pressure_advance: 1.11 # Anycubic PETG black
+#pressure_advance: 0.625 # generic PLA
+
+
+#uncomment two lines for flow rate tests:
+# also adhjust max extrusion length below!
+#pressure_advance: 0
+#max_extrude_cross_section: 10
+
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: PB4
@@ -58,14 +66,15 @@ sensor_pin: PK5
 min_extrude_temp: 150
 min_temp: 0
 max_temp: 275
-max_extrude_only_distance: 101.0 #needed for filament change retraction
+#max_extrude_only_distance: 101.0 #needed for filament change retraction
+max_extrude_only_distance: 999.0 #needed for flow tests
 
-#comment in for retraction tuning tower
-#[firmware_retraction]
-#retract_length: 0.8
-#retract_speed: 60
-#unretract_extra_length: 0
-#unretract_speed: 60
+#usually not used, only for retraction tuning tower with firmware retract enabled in slicer:
+[firmware_retraction]
+retract_length: 2.5 #PLA
+retract_speed: 60
+unretract_extra_length: 0
+unretract_speed: 60
 
 [heater_bed]
 heater_pin: PH5
@@ -97,7 +106,7 @@ serial: /dev/ttyUSB0
 [printer]
 kinematics: delta
 max_velocity: 510 # 600 tested with 50 its plus 15% safety
-max_accel: 15300 # 18000 tested with 50 its plus 15% safety
+max_accel: 10000 #was 15300 before, lowered to be easier on the hardware joints etc # 18000 tested with 50 its plus 15% safety
 max_z_velocity: 200
 #delta_radius: 133.0
 print_radius: 101.0
@@ -162,17 +171,17 @@ gcode:
 #*# [stepper_a]
 #*# angle = 209.479880
 #*# arm_length = 266.800000
-#*# position_endstop = 294.726773
+#*# position_endstop = 294.892
 #*#
 #*# [stepper_b]
 #*# angle = 330.301661
 #*# arm_length = 266.800000
-#*# position_endstop = 295.390079
+#*# position_endstop = 295.555
 #*#
 #*# [stepper_c]
 #*# angle = 90.000000
 #*# arm_length = 266.800000
-#*# position_endstop = 296.500657
+#*# position_endstop = 296.666
 #*#
 #*# [extruder]
 #*# control = pid
