Update printer.cfg: minor PA retune for new nozzle

--- a/printer.cfg
+++ b/printer.cfg
@@ -46,7 +46,8 @@ enable_pin: !PA2
 microsteps: 16
 rotation_distance: 33.499665
 pressure_advance: 1.11 # Anycubic PETG black
-#pressure_advance: 0.625 # generic PLA
+#pressure_advance: 0.600 # generic PLA, was 0.625 with previous nozzle
+#pressure_advance: 0.200 green old PLA is different for some reason
 
 
 #uncomment two lines for flow rate tests:
