add TMC2209 stepper and cooling fan

--- a/printer.cfg
+++ b/printer.cfg
@@ -10,12 +10,18 @@
 
 [stepper_a]
 step_pin: PF0
-dir_pin: !PF1
+dir_pin: PF1
 enable_pin: !PD7
-microsteps: 16
+microsteps:32
 rotation_distance: 40
 endstop_pin: ^PE4
-homing_speed: 60
+homing_speed: 30
+
+[tmc2209 stepper_a]
+uart_pin: PB5 #D11
+run_current: .8
+hold_current: .4
+#stealthchop_threshold: 999999 # uncomment to enable more silent 'stealthChop'
 # The next parameter needs to be adjusted for
 # your printer. You may want to start with 280
 # and meassure the distance from nozzle to bed.
@@ -25,30 +31,41 @@ homing_speed: 60
 
 [stepper_b]
 step_pin: PF6
-dir_pin: !PF7
+dir_pin: PF7
 enable_pin: !PF2
-microsteps: 16
+microsteps: 32
 rotation_distance: 40
 endstop_pin: ^PJ0
 
+[tmc2209 stepper_b]
+uart_pin: PG5 #D4
+run_current: .8
+hold_current: .4
+#stealthchop_threshold: 999999 # uncomment to enable more silent 'stealthChop'
+
 [stepper_c]
 step_pin: PL3
-dir_pin: !PL1
+dir_pin: PL1
 enable_pin: !PK0
-microsteps: 16
+microsteps: 32
 rotation_distance: 40
 endstop_pin: ^PD2
 
+[tmc2209 stepper_c]
+uart_pin: PH3 #D6
+run_current: .8
+hold_current: .4
+#stealthchop_threshold: 999999 # uncomment to enable more silent 'stealthChop'
+
 [extruder]
 step_pin: PA4
-dir_pin: !PA6
+dir_pin: PA6
 enable_pin: !PA2
-microsteps: 16
+microsteps: 32
 rotation_distance: 33.499665
 pressure_advance: 1.11 # Anycubic PETG black
 #pressure_advance: 0.600 # generic PLA, was 0.625 with previous nozzle
-#pressure_advance: 0.200 green old PLA is different for some reason
-
+#pressure_advance: 0.200 #two trees PLA green is different for some reason
 
 #uncomment two lines for flow rate tests:
 # also adhjust max extrusion length below!
@@ -67,8 +84,14 @@ sensor_pin: PK5
 min_extrude_temp: 150
 min_temp: 0
 max_temp: 275
-#max_extrude_only_distance: 101.0 #needed for filament change retraction
-max_extrude_only_distance: 999.0 #needed for flow tests
+max_extrude_only_distance: 101.0 #needed for filament change retraction
+#max_extrude_only_distance: 999.0 #needed for flow tests
+
+[tmc2209 extruder]
+uart_pin: PE3 #D5
+run_current: .8
+hold_current: .4
+#stealthchop_threshold: 999999 # uncomment to enable more silent 'stealthChop'
 
 #usually not used, only for retraction tuning tower with firmware retract enabled in slicer:
 [firmware_retraction]
@@ -92,8 +115,16 @@ max_temp: 130
 pin: PH6
 kick_start_time: 0.200
 
+[controller_fan stepper_driver_fan]
+pin: PH4 #D7
+shutdown_speed: 1.0
+fan_speed: 0.75
+idle_timeout: 30
+
 [heater_fan extruder_cooler_fan]
 pin: PL5
+
+
 
 # if you want to use your probe for DELTA_CALIBRATE you will need that
 [probe]
@@ -172,17 +203,17 @@ gcode:
 #*# [stepper_a]
 #*# angle = 209.479880
 #*# arm_length = 266.800000
-#*# position_endstop = 294.892
+#*# position_endstop = 294.827
 #*#
 #*# [stepper_b]
 #*# angle = 330.301661
 #*# arm_length = 266.800000
-#*# position_endstop = 295.555
+#*# position_endstop = 295.490
 #*#
 #*# [stepper_c]
 #*# angle = 90.000000
 #*# arm_length = 266.800000
-#*# position_endstop = 296.666
+#*# position_endstop = 296.601
 #*#
 #*# [extruder]
 #*# control = pid
