Add input shaper and lower acceleration

--- a/printer.cfg
+++ b/printer.cfg
@@ -93,6 +93,11 @@ run_current: .8
 hold_current: .4
 #stealthchop_threshold: 999999 # uncomment to enable more silent 'stealthChop'
 
+[input_shaper]
+shaper_freq_x: 36.97
+shaper_freq_y: 28.34
+shaper_type: mzv
+
 #usually not used, only for retraction tuning tower with firmware retract enabled in slicer:
 [firmware_retraction]
 retract_length: 2.5 #PLA
@@ -138,7 +143,7 @@ serial: /dev/ttyUSB0
 [printer]
 kinematics: delta
 max_velocity: 510 # 600 tested with 50 its plus 15% safety
-max_accel: 10000 #was 15300 before, lowered to be easier on the hardware joints etc # 18000 tested with 50 its plus 15% safety
+max_accel: 5500 # lowered from 10000 due to mzv input shaper #was 15300 before, lowered to be easier on the hardware joints etc # 18000 tested with 50 its plus 15% safety
 max_z_velocity: 200
 #delta_radius: 133.0
 print_radius: 101.0
