--- a/printer.cfg
+++ b/printer.cfg
@@ -63,8 +63,9 @@ dir_pin: PA6
 enable_pin: !PA2
 microsteps: 32
 rotation_distance: 33.499665
-pressure_advance: 1.11 # Anycubic PETG black
-#pressure_advance: 0.600 # generic PLA, was 0.625 with previous nozzle
+# note pressure advance should now be set via slicer filament settings, this is just the fallback
+#pressure_advance: 1.11 # Anycubic PETG black
+pressure_advance: 0.600 # generic PLA, was 0.625 with previous nozzle
 #pressure_advance: 0.200 #two trees PLA green is different for some reason
 
 #uncomment two lines for flow rate tests:
